# inkwell

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  book.toml  config.docker.yaml  config.example.yaml
.forgejo/workflows/: ci.yml  docs.yml  publish.yml
docs/: SUMMARY.md  admin.md  configuration.md  extensions.md  index.md  installation.md  reading.md  self-hosting.md  sidecar.md
pair/: Cargo.toml  Dockerfile  README.md
pair/src/: main.rs
src/: admin.rs  bookmarks.rs  config.rs  extract.rs  feed_search.rs  feeds.rs  gemini.rs  http_client.rs  img.rs  jobs.rs  logging.rs  main.rs  opml.rs  routes.rs  state.rs  template.rs  view.rs
src/templates/: admin.html  item.html  listing.html  page.html  style.css
theme/: inkwell.css  inkwell.js
