[package]
name = "inkwell"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "inkwell"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
feed-rs = "2"
futures = "0.3"
html-escape = "0.2"
readability = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
sha1 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[profile.release]
lto = "thin"
codegen-units = 1
