[workspace]
members = ["pair"]

[package]
name = "inkwell"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "inkwell"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
feed-rs = "2"
futures = "0.3"
honker = "0.3"
html-escape = "0.2"
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
scraper = "0.20"
readability = { version = "0.3", default-features = false }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "json"] }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
sha1 = "0.10"
time = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[dev-dependencies]
http-body-util = "0.1"
mediatype = "0.19"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = "thin"
codegen-units = 1
